force-app/main/default/objects/UtFC_Education_Event__c/UtFC_Education_Event__c.object-meta.xml
<CustomObject>
    <label>UtFC Education Event</label>
    <nameField>
        <label>UtFC Education Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UtFC Education Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>