force-app/main/default/objects/UtFC_Education_Event__c/fields/Amount_of_vouchers_received__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_vouchers_received__c</fullName>
    <label>Amount of vouchers received</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>