force-app/main/default/objects/UtFC_Education_Event__c/fields/Attending_school_2__c.field-meta.xml
<CustomField>
    <fullName>Attending_school_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attending School 2</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UtFC Education Events (Attending School 2)</relationshipLabel>
    <relationshipName>UtFC_Education_Events2</relationshipName>
    <type>Lookup</type>
</CustomField>