force-app/main/default/objects/UtFC_Education_Event__c/fields/Attending_School_3__c.field-meta.xml
<CustomField>
    <fullName>Attending_School_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attending School 3</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UtFC Education Events (Attending School 3)</relationshipLabel>
    <relationshipName>UtFC_Education_Events3</relationshipName>
    <type>Lookup</type>
</CustomField>