force-app/main/default/objects/UtFC_Education_Event__c/fields/Attending_School__c.field-meta.xml
<CustomField>
    <fullName>Attending_School__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Attending School 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UtFC Education Events</relationshipLabel>
    <relationshipName>UtFC_Education_Events</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>