force-app/main/default/objects/UtFC_Education_Event__c/fields/Bus_costs__c.field-meta.xml
<CustomField>
    <fullName>Bus_costs__c</fullName>
    <description>What is the cost to Utah Film Center for the cost of bussing to and from the event.</description>
    <inlineHelpText>What is the cost to Utah Film Center for the cost of bussing to and from the event.</inlineHelpText>
    <label>Bus costs</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>