force-app/main/default/objects/UtFC_Education_Event__c/fields/Bus_info__c.field-meta.xml
<CustomField>
    <fullName>Bus_info__c</fullName>
    <label>Busing info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No busses needed</fullName>
            </value>
            <value>
                <fullName>Busses provided buy Utah Film Center</fullName>
            </value>
            <value>
                <fullName>Busses provided by attending school</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>