force-app/main/default/objects/UtFC_Education_Event__c/fields/Busing_Stipend__c.field-meta.xml
<CustomField>
    <fullName>Busing_Stipend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Busing Stipend?</label>
    <type>Checkbox</type>
</CustomField>