force-app/main/default/objects/UtFC_Education_Event__c/fields/Conference_attended__c.field-meta.xml
<CustomField>
    <fullName>Conference_attended__c</fullName>
    <label>Conference attended</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arts Day on the Hill</fullName>
            </value>
            <value>
                <fullName>Arts Express</fullName>
            </value>
            <value>
                <fullName>CTE</fullName>
            </value>
            <value>
                <fullName>ISTE</fullName>
            </value>
            <value>
                <fullName>Learning Edge</fullName>
            </value>
            <value>
                <fullName>MWAC</fullName>
            </value>
            <value>
                <fullName>NAMAC</fullName>
            </value>
            <value>
                <fullName>NGCAE</fullName>
            </value>
            <value>
                <fullName>UACTE</fullName>
            </value>
            <value>
                <fullName>UAEA</fullName>
            </value>
            <value>
                <fullName>UCET</fullName>
            </value>
            <value>
                <fullName>UCSS</fullName>
            </value>
            <value>
                <fullName>UEA</fullName>
            </value>
            <value>
                <fullName>URSA</fullName>
            </value>
            <value>
                <fullName>USTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>