force-app/main/default/objects/UtFC_Education_Event__c/fields/County_s_EDU__c.field-meta.xml
<CustomField>
    <fullName>County_s_EDU__c</fullName>
    <label>County(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Beaver County</fullName>
            </value>
            <value>
                <fullName>Box Elder County</fullName>
            </value>
            <value>
                <fullName>Cache County</fullName>
            </value>
            <value>
                <fullName>Carbon County</fullName>
            </value>
            <value>
                <fullName>Daggett County</fullName>
            </value>
            <value>
                <fullName>Davis County</fullName>
            </value>
            <value>
                <fullName>Duchesne County</fullName>
            </value>
            <value>
                <fullName>Emery County</fullName>
            </value>
            <value>
                <fullName>Garfield County</fullName>
            </value>
            <value>
                <fullName>Grand County</fullName>
            </value>
            <value>
                <fullName>Iron County</fullName>
            </value>
            <value>
                <fullName>Juab County</fullName>
            </value>
            <value>
                <fullName>Kane County</fullName>
            </value>
            <value>
                <fullName>Millard County</fullName>
            </value>
            <value>
                <fullName>Morgan County</fullName>
            </value>
            <value>
                <fullName>Piute County</fullName>
            </value>
            <value>
                <fullName>Rich County</fullName>
            </value>
            <value>
                <fullName>Salt Lake County</fullName>
            </value>
            <value>
                <fullName>San Juan County</fullName>
            </value>
            <value>
                <fullName>Sanpete County</fullName>
            </value>
            <value>
                <fullName>Sevier County</fullName>
            </value>
            <value>
                <fullName>Summit County</fullName>
            </value>
            <value>
                <fullName>Tooele County</fullName>
            </value>
            <value>
                <fullName>Uintah County</fullName>
            </value>
            <value>
                <fullName>Utah County</fullName>
            </value>
            <value>
                <fullName>Wasatch County</fullName>
            </value>
            <value>
                <fullName>Washington County</fullName>
            </value>
            <value>
                <fullName>Wayne County</fullName>
            </value>
            <value>
                <fullName>Weber County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>