force-app/main/default/objects/UtFC_Education_Event__c/fields/Date_and_Time_EDU__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time_EDU__c</fullName>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>