force-app/main/default/objects/UtFC_Education_Event__c/fields/EDU_Event_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>EDU_Event_Name_Formula__c</fullName>
    <formula>Attending_School__c &amp;&quot;- &quot; &amp; Teacher_EDU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EDU Event Name Formula</label>
    <type>Text</type>
</CustomField>