force-app/main/default/objects/UtFC_Education_Event__c/fields/Education_Program__c.field-meta.xml
<CustomField>
    <fullName>Education_Program__c</fullName>
    <label>Education Program</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BTA</fullName>
                <label>Behind the Animation</label>
            </value>
            <value>
                <fullName>FilmSpark</fullName>
                <label>Film Spark</label>
            </value>
            <value>
                <fullName>MovingStories</fullName>
                <label>Moving Stories - VR AR</label>
            </value>
            <value>
                <fullName>SHIFT</fullName>
                <label>SHIFT: Filmmaking in the Classroom</label>
            </value>
            <value>
                <fullName>TML</fullName>
                <label>Through My Lens (TML)</label>
            </value>
            <value>
                <fullName>TFFT</fullName>
                <label>Tumbleweeds Festival Field Trips</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>