force-app/main/default/objects/UtFC_Education_Event__c/fields/End_Date_and_TIme_EDU__c.field-meta.xml
<CustomField>
    <fullName>End_Date_and_TIme_EDU__c</fullName>
    <label>End Date and TIme</label>
    <type>DateTime</type>
</CustomField>