force-app/main/default/objects/UtFC_Education_Event__c/fields/Event_Status__c.field-meta.xml
<CustomField>
    <fullName>Event_Status__c</fullName>
    <label>Event Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Working to Confirm</fullName>
                <default>true</default>
                <label>Working to Confirm</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Waitlist (See Notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>