force-app/main/default/objects/UtFC_Education_Event__c/fields/Film_Link__c.field-meta.xml
<CustomField>
    <fullName>Film_Link__c</fullName>
    <label>Film Link (if virtual)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>