force-app/main/default/objects/UtFC_Education_Event__c/fields/Film_Link_Notes__c.field-meta.xml
<CustomField>
    <fullName>Film_Link_Notes__c</fullName>
    <label>Film Link Notes</label>
    <type>TextArea</type>
</CustomField>