force-app/main/default/objects/UtFC_Education_Event__c/fields/Film_Number_of_Views__c.field-meta.xml
<CustomField>
    <fullName>Film_Number_of_Views__c</fullName>
    <description>How many rentals do they need?  Are they watching it in class or does each student need access to watch it at home.</description>
    <label>Number of Views (if virtual)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>