force-app/main/default/objects/UtFC_Education_Event__c/fields/Film_Spark_Film__c.field-meta.xml
<CustomField>
    <fullName>Film_Spark_Film__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Film Spark Film (DEPRECATED)</label>
    <referenceTo>Film_Spark_Film__c</referenceTo>
    <relationshipLabel>UtFC Education Events</relationshipLabel>
    <relationshipName>UtFC_Education_Events</relationshipName>
    <type>Lookup</type>
</CustomField>