force-app/main/default/objects/UtFC_Education_Event__c/fields/Film_Spark_Film_From_Film_Events__c.field-meta.xml
<CustomField>
    <fullName>Film_Spark_Film_From_Film_Events__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Film Spark Film (From Film Events)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>UtFC_Film_Event__c.Program_Series__c</field>
            <operation>contains</operation>
            <value>film spark</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>UtFC_Film_Event__c</referenceTo>
    <relationshipLabel>UtFC Education Events (Film Spark Film (From Film Events))</relationshipLabel>
    <relationshipName>UtFC_Education_Events_Films</relationshipName>
    <type>Lookup</type>
</CustomField>