force-app/main/default/objects/UtFC_Education_Event__c/fields/Guests_EDU__c.field-meta.xml
<CustomField>
    <fullName>Guests_EDU__c</fullName>
    <label>Guests</label>
    <length>255</length>
    <type>Text</type>
</CustomField>