force-app/main/default/objects/UtFC_Education_Event__c/fields/In_Person_Virtual_Hybrid__c.field-meta.xml
<CustomField>
    <fullName>In_Person_Virtual_Hybrid__c</fullName>
    <label>In-Person / Virtual / Hybrid</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-Person</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>