force-app/main/default/objects/UtFC_Education_Event__c/fields/Logged_in_POPS_report__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_POPS_report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logged in POPS report</label>
    <type>Checkbox</type>
</CustomField>