force-app/main/default/objects/UtFC_Education_Event__c/fields/Number_of_busses_required__c.field-meta.xml
<CustomField>
    <fullName>Number_of_busses_required__c</fullName>
    <description>How many busses are expected for the event?</description>
    <inlineHelpText>How many busses are expected for the event?</inlineHelpText>
    <label>Number of busses required</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>