force-app/main/default/objects/UtFC_Education_Event__c/fields/Number_of_Students_Reached__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Students_Reached__c</fullName>
    <label>Number of Students Reached</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>