force-app/main/default/objects/UtFC_Education_Event__c/fields/Number_of_Teachers_Reached__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Teachers_Reached__c</fullName>
    <inlineHelpText>How many teachers were reached by this event/presentation?</inlineHelpText>
    <label>Number of Teachers Reached</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>