force-app/main/default/objects/UtFC_Education_Event__c/fields/Number_of_Title_I_Students_Reached__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Title_I_Students_Reached__c</fullName>
    <inlineHelpText>How many of the attending students were Title I?</inlineHelpText>
    <label>Number of Title I Students Reached:</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>