force-app/main/default/objects/UtFC_Education_Event__c/fields/Post_materials_sent_to_teacher__c.field-meta.xml
<CustomField>
    <fullName>Post_materials_sent_to_teacher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post-materials sent to teacher?</label>
    <type>Checkbox</type>
</CustomField>