force-app/main/default/objects/UtFC_Education_Event__c/fields/Pre_Materials_sent_to_teacher__c.field-meta.xml
<CustomField>
    <fullName>Pre_Materials_sent_to_teacher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Materials sent to teacher?</label>
    <type>Checkbox</type>
</CustomField>