force-app/main/default/objects/UtFC_Education_Event__c/fields/Presenter2_EDU__c.field-meta.xml
<CustomField>
    <fullName>Presenter2_EDU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Presenter(2)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UtFC Education Events (Presenter(2))</relationshipLabel>
    <relationshipName>UtFC_Education_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>