force-app/main/default/objects/UtFC_Education_Event__c/fields/Presenter_Edu__c.field-meta.xml
<CustomField>
    <fullName>Presenter_Edu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Presenter of Education Event?</inlineHelpText>
    <label>Presenter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UtFC Education Events</relationshipLabel>
    <relationshipName>UtFC_Education_Events</relationshipName>
    <type>Lookup</type>
</CustomField>