force-app/main/default/objects/UtFC_Education_Event__c/fields/Presenter_invoice_processed__c.field-meta.xml
<CustomField>
    <fullName>Presenter_invoice_processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Presenter invoice processed</label>
    <type>Checkbox</type>
</CustomField>