force-app/main/default/objects/UtFC_Education_Event__c/fields/Received_Vouchers__c.field-meta.xml
<CustomField>
    <fullName>Received_Vouchers__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did this school or group receive festival vouchers?</inlineHelpText>
    <label>Received Vouchers?</label>
    <type>Checkbox</type>
</CustomField>