force-app/main/default/objects/UtFC_Education_Event__c/fields/Related_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Relate this record to the campaign that holds the attendee information.</inlineHelpText>
    <label>Related Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>UtFC Education Events</relationshipLabel>
    <relationshipName>UtFC_Education_Events</relationshipName>
    <type>Lookup</type>
</CustomField>