force-app/main/default/objects/UtFC_Education_Event__c/fields/School_District_1__c.field-meta.xml
<CustomField>
    <fullName>School_District_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School District 1</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>UtFC Education Events (School District 1)</relationshipLabel>
    <relationshipName>UtFC_Education_Events1</relationshipName>
    <type>Lookup</type>
</CustomField>