force-app/main/default/objects/UtFC_Education_Event__c/fields/SHIFT_Workshop_type__c.field-meta.xml
<CustomField>
    <fullName>SHIFT_Workshop_type__c</fullName>
    <inlineHelpText>What type of Workshop is this SHIFT event?</inlineHelpText>
    <label>SHIFT Workshop Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Filmmaking in the Classroom</fullName>
            </value>
            <value>
                <fullName>Through My Lens (TML)</fullName>
            </value>
            <value>
                <fullName>Big Screen Science</fullName>
                <isActive>false</isActive>
                <label>Big Screen Science</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>