force-app/main/default/objects/UtFC_Education_Event__c/fields/Teacher_EDU__c.field-meta.xml
<CustomField>
    <fullName>Teacher_EDU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Teacher Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>UtFC Education Events (Teacher Name)</relationshipLabel>
    <relationshipName>UtFC_Education_Events2</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>