force-app/main/default/objects/UtFC_Education_Event__c/fields/Title_I_school__c.field-meta.xml
<CustomField>
    <fullName>Title_I_school__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Title I School?</label>
    <type>Checkbox</type>
</CustomField>