force-app/main/default/objects/UtFC_Education_Event__c/fields/UFC_Staff_Lead_s__c.field-meta.xml
<CustomField>
    <fullName>UFC_Staff_Lead_s__c</fullName>
    <inlineHelpText>Who is the lead and/or main contact for this event?</inlineHelpText>
    <label>UFC Staff Lead(s)</label>
    <length>40</length>
    <type>Text</type>
</CustomField>