force-app/main/default/objects/UtFC_Education_Event__c/fields/UtFC_Film_Event__c.field-meta.xml
<CustomField>
    <fullName>UtFC_Film_Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>UtFC Film Event</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>UtFC_Film_Event__c.Program_Series__c</field>
            <operation>contains</operation>
            <value>Tumbleweeds</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>UtFC_Film_Event__c</referenceTo>
    <relationshipLabel>UtFC Education Events</relationshipLabel>
    <relationshipName>UtFC_Education_Events</relationshipName>
    <type>Lookup</type>
</CustomField>