force-app/main/default/objects/UtFC_Education_Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date_and_Time_EDU__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Teacher_EDU__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>