force-app/main/default/objects/UtFC_Education_Event__c/listViews/SHIFT.listView-meta.xml
<ListView>
    <fullName>SHIFT</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Education_Program__c</field>
        <operation>equals</operation>
        <value>SHIFT</value>
    </filters>
    <label>SHIFT</label>
</ListView>